# qsis_renew

./: .gitignore  Fiverr_Gig_Template.md  NTP_SYNC.md  README.md  app.py  bar.py  dashboard.json  docker-compose.yml  foo.py  note.md  pyproject.toml  server.py  sniffer.py  starter.py  test_mseed.py  test_server.py
.agents/workflows/: streaming-canvas-dashboard.md
.github/workflows/: ci.yml
grafana/dashboards/: seismic.json
grafana/provisioning/dashboards/: default.yml
grafana/provisioning/datasources/: mqtt.yml
static/: app.js  config.json  en.json  index.html  zh.json
